--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -444,7 +444,16 @@ If this looks weird, comment out the window buttons section.
   padding-top: 0;
 }
 
-/* disable "Firefox Suggest" text | better selector needed, please PR if you have one */
+/* disable "Firefox Suggest" text */
 .urlbarView-row[label="Firefox Suggest"] {
-  display: none!important;
+  padding-top: 0;
+  margin-top: 0;
+}
+
+.urlbarView-row[label="Firefox Suggest"]::before {
+  display: none !important;
+}
+
+.urlbarView-row[label] {
+  margin-block-start: 0 !important;
 }
